--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.8'
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'org.spockframework:spock-spring:1.3-groovy-2.5'
+    testImplementation("org.testcontainers:kafka:1.11.2")
+    testImplementation("org.testcontainers:spock:1.11.2")
     testImplementation 'junit:junit:4.12'
 }
 
