--- a/build.gradle
+++ b/build.gradle
@@ -17,22 +17,26 @@ sourceCompatibility = '1.8'
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+    implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE'
+
+    implementation 'io.springfox:springfox-swagger2:2.9.2'
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+    testImplementation('org.springframework.boot:spring-boot-starter-test')  {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
 
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.8'
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'org.spockframework:spock-spring:1.3-groovy-2.5'
-    testImplementation("org.testcontainers:kafka:1.11.2")
-    testImplementation("org.testcontainers:spock:1.11.2")
+    testImplementation "org.testcontainers:kafka:1.11.2"
+    testImplementation "org.testcontainers:spock:1.11.2"
     testImplementation 'junit:junit:4.12'
 }
 
