--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 spring:
+  main:
+    banner-mode: off
+  output:
+    ansi:
+      enabled: ALWAYS
   kafka:
+
       bootstrap-servers: ${ENV_KAFKA_BOOTSTRAP_SERVERS}
       consumer:
         auto-offset-reset: earliest
@@ -8,3 +14,7 @@ spring:
       producer:
         key-serializer: org.apache.kafka.common.serialization.StringSerializer
         value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+logging:
+  level:
+    org.apache.kafka: INFO
