--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,13 +6,8 @@ spring:
       enabled: ALWAYS
   kafka:
       bootstrap-servers: ${ENV_KAFKA_BOOTSTRAP_SERVERS}
-      consumer:
-        auto-offset-reset: earliest
-        key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-        value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       producer:
-        key-serializer: org.apache.kafka.common.serialization.StringSerializer
-        value-serializer: org.apache.kafka.common.serialization.StringSerializer
+        retries: 0
 logging:
   level:
     org.apache.kafka: INFO
